# splitster

./: CMakeLists.txt  README.md
cmake-modules/: cmake_uninstall_dirs.cmake.in
src/: main.cpp  mainwindow.cpp  mainwindow.hpp
